temp-deployment/grafana.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-monitoring
  template:
    metadata:
      labels:
        app: grafana-monitoring
    spec:
      containers:
      - name: grafana-monitoring
        image: grafana/grafana
        ports:
        - containerPort: 3000
        
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: 'HTTP'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '10'
    alb.ingress.kubernetes.io/success-codes: 200-499
    alb.ingress.kubernetes.io/target-type: 'ip'
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/actions.default: >
      {"Type": "forward", "ForwardConfig": {"TargetGroups": [{"ServiceName": "grafana-service", "ServicePort": "3000"}]}}
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/subnets: subnet-03a226f4f95726e02, subnet-08ab9437cc511cb37
spec:
  ingressClassName: alb
  rules:
  - host: grafana.42744448630.realhandsonlabs.net
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
             number: 3000
